# cloudberrydb

./: .asf.yaml  .gitignore  .gitmessage  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER  GNUmakefile.in  LICENSE  NOTICE  README.apache.md  README.md  SECURITY.md  configure  configure.ac  getversion  pom.xml  python-dependencies.txt  sonar-project.properties
contrib/pax_storage/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CPPLINT.cfg  FindDependencies.cmake  Makefile  README  README.md  init_file  pax_schedule
contrib/pax_storage/.ci/tf/: qingcloud-provider.tf
contrib/pax_storage/.githooks/: pre-push
contrib/pax_storage/doc/: README.catalog.md  README.clustering.md  README.dev.md  README.filter.md  README.format.md  README.md  README.toast.md  performance.md
contrib/pax_storage/expected/: alter_distributed.out  cbdb_parallel.out  cbdb_parallel_1.out  cbdb_parallel_2.out  cluster.out  db_size_functions.out  ddl.out  default_value.out  default_value_1.out  default_value_optimizer.out  default_value_optimizer_1.out  detoast.out  dictionary_encoding.out  dictionary_encoding_1.out  dictionary_encoding_optimizer.out  filter.out  filter_1.out  filter_tree.out  filter_tree_1.out  filter_tree_arithmetic.out  filter_tree_arithmetic_1.out  filter_tree_optimizer.out  filter_tree_optimizer_1.out  filter_tree_root_quals.out  filter_tree_root_quals_1.out  filter_tree_root_quals_2.out  filter_tree_root_quals_3.out  numeric.out  pax_inject_fault.out  setup.out  statistics.out  statistics_bloom_filter.out  teardown.out  toast.out  toast_failed.out  update_gp.out  visimap_vec_compact.out  visimap_vec_compact_1.out  visimap_vec_storage.out  visimap_vec_storage_1.out  (+1 more)
contrib/pax_storage/expected/statistics/: min_max_bit_byte_types.out  min_max_float_types.out  min_max_geo_types.out  min_max_int_types.out  min_max_net_types.out  min_max_other_types.out  min_max_text_types.out  min_max_time_types.out  statistics.out
contrib/pax_storage/hd-ci/: clang_tidy_pax.bash  compile_pax.bash
contrib/pax_storage/icw_test/regress/: GNUmakefile  greenplum_schedule  pg_regress.c
contrib/pax_storage/icw_test/regress/expected/: alter_table_aocs.out  gp_parallel.out  misc_sanity.out  misc_sanity_external_fts.out  reloptions.out  rpt_joins_external_fts.out  sanity_check.out
contrib/pax_storage/icw_test/regress/sql/: alter_table_aocs.sql  gp_parallel.sql  reloptions.sql
contrib/pax_storage/sql/: alter_distributed.sql  cbdb_parallel.sql  cluster.sql  db_size_functions.sql  ddl.sql  default_value.sql  dictionary_encoding.sql  filter.sql  filter_tree.sql  filter_tree_arithmetic.sql  filter_tree_root_quals.sql  pax_inject_fault.sql  setup.sql  statistics.sql  statistics_bloom_filter.sql  teardown.sql  toast.sql  toast_failed.sql  visimap_vec_compact.sql  visimap_vec_storage.sql  zorder_cluster.sql
contrib/pax_storage/sql/statistics/: min_max_bit_byte_types.sql  min_max_float_types.sql  min_max_geo_types.sql  min_max_int_types.sql  min_max_net_types.sql  min_max_other_types.sql  min_max_text_types.sql  min_max_time_types.sql  statistics.sql
contrib/pax_storage/src/api/python3/: .gitignore  CMakeLists.txt  MANIFEST.in  paxfile_type.cc  paxfilereader_type.cc  paxpy_comm.h  paxpy_modules.cc  paxpy_types.h  paxtype_cast.cc  setup-debug.py  setup.py
contrib/pax_storage/src/cpp/: CMakeLists.txt  pax_gbench.cc  pax_gtest.cc  pax_gtest_helper.cc  pax_gtest_helper.h  paxformat_test.cc
contrib/pax_storage/src/cpp/access/: pax_access.cc  pax_access.h  pax_access_handle.cc  pax_access_handle.h  pax_access_handle_cc.cc  pax_access_method_internal.cc  pax_deleter.cc  pax_deleter.h  pax_dml_state.cc  pax_dml_state.h  pax_inserter.cc  pax_inserter.h  pax_partition.cc  pax_scan_desc.cc  pax_scan_desc.h  pax_scanner.cc  pax_scanner.h  pax_table_cluster.cc  pax_table_cluster.h  pax_updater.cc  pax_updater.h  pax_visimap.cc  pax_visimap.h  paxc_rel_options.cc  paxc_rel_options.h  paxc_scanner.cc  paxc_scanner.h
contrib/pax_storage/src/cpp/catalog/: iterator.h  manifest_api.h  micro_partition_metadata.cc  micro_partition_metadata.h  micro_partition_stats.cc  micro_partition_stats.h  pax_aux_table.cc  pax_aux_table.h  pax_catalog.h  pax_catalog_columns.h  pax_fastsequence.cc  pax_fastsequence.h  pax_manifest.cc  pax_manifest_impl.cc  pg_pax_tables.cc  pg_pax_tables.h  table_metadata.cc  table_metadata.h  table_metadata_test.cc
contrib/pax_storage/src/cpp/clustering/: clustering.cc  clustering.h  clustering_reader.h  clustering_writer.h  index_clustering.cc  index_clustering.h  lexical_clustering.cc  lexical_clustering.h  pax_clustering_reader.cc  pax_clustering_reader.h  pax_clustering_writer.cc  pax_clustering_writer.h  sorter.h  sorter_index.cc  sorter_index.h  sorter_tuple.cc  sorter_tuple.h  zorder_clustering.cc  zorder_clustering.h  zorder_utils.cc  zorder_utils.h  zorder_utils_test.cc
contrib/pax_storage/src/cpp/cmake/: pax.cmake  pax_format.cmake
contrib/pax_storage/src/cpp/comm/: bitmap.cc  bitmap.h  bitmap_test.cc  bloomfilter.cc  bloomfilter.h  bloomfilter_test.cc  byte_buffer.cc  byte_buffer.h  cbdb_api.h  cbdb_wrappers.cc  cbdb_wrappers.h  comm_test.cc  fmt.h  gtest_wrappers.h  guc.cc  guc.h  iterator.h  local_warppers.h  local_wrappers.cc  local_wrappers.h  log.h  pax_def.h  pax_defer.h  pax_memory.cc  pax_memory.h  pax_rel.h  pax_resource.cc  pax_resource.h  paxc_utils.cc  paxc_utils.h  paxc_utils_test.cc  paxc_wrappers.cc  paxc_wrappers.h  singleton.h  vec_numeric.cc  vec_numeric.h
contrib/pax_storage/src/cpp/exceptions/: CException.cc  CException.h
contrib/pax_storage/src/cpp/manifest/: manifest.c  manifest.h  manifest_wrapper.cc  manifest_wrapper.h  scan.c  tuple.c  tuple.h
contrib/pax_storage/src/cpp/storage/: README_CTID_in_pax.md  column_projection_info.cc  column_projection_info.h  column_projection_info_test.cc  column_read_info.cc  column_read_info.h  file_system.cc  file_system.h  pax.cc  (+57 more)
contrib/pax_storage/src/data/: Makefile  pax--1.0.sql  pax-cdbinit--1.0.sql  pax.control  paxam_handler.c
contrib/pax_storage/tools/: gen_sql.c
(+2868 files in other folders)
